# pretix-stripe-blik-payment

./: LICENSE  MANIFEST.in  README.md  gen-locales.sh  pretixplugin.toml  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yml
pretix_stripe_blik_payment/: apps.py  payment.py  signals.py  urls.py  views.py
pretix_stripe_blik_payment/locale/: django.pot
pretix_stripe_blik_payment/locale/en/LC_MESSAGES/: django.po
pretix_stripe_blik_payment/locale/pl/LC_MESSAGES/: django.po
pretix_stripe_blik_payment/static/pretix_stripe_blik_payment/: confirm_blik.js  pending_blik.js
pretix_stripe_blik_payment/templates/pretix_stripe_blik_payment/: checkout_confirm_blik_code.html  confirm_blik_code_field.html  pending_blik_code_form.html  pending_blik_wait.html
